Resolve "NFT image should not extends out of the box in NFT detail page & NFT transfer record page"

--- a/src/components/nft/one-nft.css
+++ b/src/components/nft/one-nft.css
@@ -1,11 +1,6 @@
-.nft-image-big::part(image) {
-  height: 144px;
-  width: 144px;
-  border-radius: 12px;
-}
-
-.nft-image-small::part(image) {
-  height: 96px;
-  width: 96px;
-  border-radius: 8px;
+.nft-image-wrapper {
+  position: relative;
+  margin: auto;
+  min-width: 312px;
+  min-height: 312px;
 }
